details.css
.details{
    display: flex;
    flex-direction: column;

    width: 100%;
    max-width: 1300px;
    padding-top: 70px;
    padding-bottom: 30px;
    margin: 0 auto;
}

.details__box:nth-last-child(even){
    background: var(--color-light-blue);
}

.details__box{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 0;
}

.details .fas, .far{
    color: var(--color-blue);
    width: 25%;
    font-size: 2.5rem;
    text-align: center;
    padding: 20px;
}

.details__text{
    color: var(--color-dark);
    padding: 20px;
    width: 70%;
    max-width: 400px;
    text-align: center;
    font-size: 1.3rem;
}

@media (min-width: 900px){
    .details{
        display: grid;
        grid-template-columns: 1fr 1fr;
        justify-content: center;
    }
    .details__box:nth-last-child(even){
        background: none;
    }
    .details__box:nth-last-child(even){
        background: none;
    }
}

@media (max-width: 400px){
    .details .fas, .far{
        font-size: 50px;
    }
}

